--- a/index.html
+++ b/index.html
@@ -16,11 +16,17 @@
 	</style>
 </head>
 <body>
+	<h1>Hello</h1>
+	<script async src="js/script.js"></script>
+	<!-- асинх скрипты не ждут друг друга запускается когда  -->
 	
 	<div class="box">
 		Touch me!
 	</div>
+	<div class="box">
+		Touch me!
+	</div>
 
-	<script src="js/script.js"></script>
+	
 </body>
 </html>
