--- a/index.html
+++ b/index.html
@@ -1,32 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>Document</title>
-	<style>
-		body {
-			height: 1000px;
-		}
-		.box {
-			width: 150px;
-			height: 100px;
-			background-color: red;
-		}
-	</style>
-</head>
-<body>
-	<h1>Hello</h1>
-	<script async src="js/script.js"></script>
-	<!-- асинх скрипты не ждут друг друга запускается когда  -->
-	
-	<div class="box">
-		Touch me!
-	</div>
-	<div class="box">
-		Touch me!
-	</div>
+<html lang="ru">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   	<title>JavaScript</title>
+   	<link rel="stylesheet" href="style.css">
+  </head>
+  <body>
 
-	
-</body>
+    <div id="first" class="btn-block">
+      <button class="blue some"></button>
+      <button></button>
+      <button></button>
+      <button></button>
+      <button></button>
+      <button></button>
+      <button></button>
+      <button></button>
+    </div>
+    
+	<script src="js/script.js"></script>
+  </body>
 </html>
