--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
             </div>
         </div>
     </div>
+		<script src="lib.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
